2015-05-13  Oliver Kiddle  <opk@zsh.org>

	* 35092: Src/Zle/zle_params.c: fix for numeric arguments
	from vi operator pending mode

	* 35093: NEWS, Functions/Zle/select-bracketed,
	Functions/Zle/select-quoted, Functions/Zle/surround:
	new zle widgets for Vim-style text objects

2015-05-13  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 35114: Src/Modules/zutil.c: zformat -a multibyte char widths.

	* Christian Hesse: 35107: Completion/Unix/Command/_ip: new ip
	options.

2015-05-13  Peter Stephenson  <p.stephenson@samsung.com>

	* users/20203: Src/builtin., Src/exec.c, Test/A01grammar.ztst:
	nested function in always traps after exit didn't work.

2015-05-12  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 35086: Doc/Zsh/expn.yo: reapply 35067 (with 35071) which
	has been mistakenly reverted by 35075

2015-05-12  Daniel Hahler  <git@thequod.de>

	* 35060 + 35072: Completion/Unix/Command/_git: completion: git: split
	__git_heads into local and remote

2015-05-12  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 35075: Doc/Zsh/builtins.yo, Doc/Zsh/calsys.yo,
	Doc/Zsh/compctl.yo, Doc/Zsh/compsys.yo, Doc/Zsh/compwid.yo,
	Doc/Zsh/contrib.yo, Doc/Zsh/expn.yo, Doc/Zsh/mod_clone.yo,
	Doc/Zsh/mod_complist.yo, Doc/Zsh/mod_curses.yo,
	Doc/Zsh/mod_parameter.yo, Doc/Zsh/mod_pcre.yo,
	Doc/Zsh/mod_sched.yo, Doc/Zsh/mod_stat.yo, Doc/Zsh/mod_system.yo,
	Doc/Zsh/mod_zftp.yo, Doc/Zsh/mod_zpty.yo, Doc/Zsh/mod_zselect.yo,
	Doc/Zsh/mod_zutil.yo, Doc/Zsh/options.yo, Doc/Zsh/params.yo,
	Doc/Zsh/tcpsys.yo, Doc/Zsh/zftpsys.yo, Doc/Zsh/zle.yo: improve
	manual format

	* unposted: ChangeLog: fixed entry for 35034 (2015-05-06)

2015-05-11  Oliver Kiddle  <opk@zsh.org>

	* 35049 (tweaked to make jname default): Completion/BSD/Type/_jails,
	Completion/Unix/Command/_ps, Completion/Unix/Command/_pgrep:
	allow jail completion to include jid 0 for the host and to complete
	jails by any parameter

2015-05-11  Peter Stephenson  <p.stephenson@samsung.com>
